--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Insta Unfollower Tracker",
-  "version": "1.14",
+  "name": "InstaDiff - Unfollower Tracker",
+  "version": "1.15",
   "description": "Find out who doesn't follow you back using plain HTML diffing.",
   "permissions": ["activeTab", "scripting", "storage"],
   "action": {
@@ -10,5 +10,12 @@
   },
   "icons": {
     "128": "icon.png"
+  },
+  
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "instadiff@yourdomain.com", 
+      "strict_min_version": "109.0"
+    }
   }
 }
